Fix: migrated to Sass module system and resolved variable scope issues

--- a/src/index.html
+++ b/src/index.html
@@ -266,6 +266,36 @@
       </div>
     </section>
     <!-- /END Projects Section -->
+    <!-- **** Experience Section **** -->
+<section id="experience">
+  <div class="container">
+    <h2 class="section-title ">Experience</h2>
+    <div class="experience-wrapper load-hidden">
+      <ul class="experience-wrapper__list">
+        <li class="experience-wrapper__list-item">
+          <h3 class="experience-wrapper__list-item-title">Job Title 1</h3>
+          <p class="experience-wrapper__list-item-subtitle">
+            Company Name | Start Date - End Date
+          </p>
+          <p class="experience-wrapper__list-item-text">
+            Describe your role, responsibilities, and achievements in this position.
+          </p>
+        </li>
+
+        <li class="experience-wrapper__list-item">
+          <h3 class="experience-wrapper__list-item-title">Job Title 2</h3>
+          <p class="experience-wrapper__list-item-subtitle">
+            Company Name | Start Date - End Date
+          </p>
+          <p class="experience-wrapper__list-item-text">
+            Describe your role, responsibilities, and achievements in this position.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+    <!-- /END Experience Section -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
@@ -276,7 +306,7 @@
           <a
             rel="noreferrer"
             target="_blank"
-            class="cta-btn cta-btn--resume"
+            class="cta-btn cta-btn--hero"
             href="mailto:example@email.com"
             >Call to Action</a
           >
