--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/fab.jpg"
+                      src="assets/fab.png"
                     />
                   </div>
                 </a>
