Update link in index.html to new phone number

--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
             rel="noreferrer"
             target="+91 7019192196"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="+91 7019192196"
             >Call to Action</a
           >
         </div>
