Update contact section with new call to action links

--- a/src/index.html
+++ b/src/index.html
@@ -165,14 +165,20 @@
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
+        
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
+          <a 
+            href="tel:+91 7019192196" 
+            class="cta-button"
+            >Call to action</a
+            >
           <a
             rel="noreferrer"
-            target="+91 7019192196"
+            target="_blank"
             class="cta-btn cta-btn--resume"
-            href="nitaixlabs@gmail.com"
-            >Call to Action</a
+            href="mailto:nitaixlabs@gmail.com"
+            >Mail us</a
           >
         </div>
       </div>
