--- a/src/index.html
+++ b/src/index.html
@@ -164,25 +164,55 @@
 
     <!-- **** Contact Section **** -->
     <section id="contact">
-      <div class="container">
-        
-        <h2 class="section-title">Contact</h2>
-        <div class="contact-wrapper load-hidden">
-          <a 
-            href="tel:+91 7019192196" 
-            class="cta-button"
-            >Call to action</a
-            >
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:nitaixlabs@gmail.com"
-            >Mail us</a
-          >
+  <div class="container">
+    <h2 class="section-title">Get In Touch</h2>
+    <p class="section-subtitle">Let's build something amazing together. Reach out and let's talk about your next project.</p>
+    
+    <div class="contact-wrapper load-hidden">
+      <!-- Contact Info Cards -->
+      <div class="contact-info-grid">
+        <div class="contact-card">
+          <div class="contact-icon">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+              <polyline points="22,6 12,13 2,6"></polyline>
+            </svg>
+          </div>
+          <h3>Email</h3>
+          <a href="mailto:nitaixlabs@gmail.com">nitaixlabs@gmail.com</a>
+        </div>
+
+        <div class="contact-card">
+          <div class="contact-icon">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+            </svg>
+          </div>
+          <h3>Phone</h3>
+          <a href="tel:+91 7019192196">+91 7019192196</a>
+        </div>
+
+        <div class="contact-card">
+          <div class="contact-icon">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+              <circle cx="12" cy="10" r="3"></circle>
+            </svg>
+          </div>
+          <h3>Location</h3>
+          <p>Bangalore, India</p>
         </div>
       </div>
-    </section>
+
+      <!-- CTA Buttons -->
+      <div class="contact-cta">
+        <a href="mailto:nitaixlabs@gmail.com" class="cta-btn cta-btn--primary">Send Email</a>
+        <a href="tel:+91 7019192196" class="cta-btn cta-btn--secondary">Call Me</a>
+      </div>
+    </div>
+  </div>
+</section>
+
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
