Update link target and href in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -123,9 +123,9 @@
                 </div>
                 <a
                   rel="noreferrer"
-                  target="www.fabaircon.store"
+                  target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://fabaircon.store/"
                 >
                   See Live
                 </a>
