--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,47 @@
             </div>
           </div>
           <!-- /END Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Fab air con</h3>
+                <div>
+                  <p class="mb-4">
+                    A modern, welcoming website for Urban Greens Cafe, designed to showcase their menu, photos, and location. 
+                    The site helps customers easily discover what’s on offer, book a table, 
+                    and get in touch—bringing the local café experience online with style and simplicity
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://urban-green-cafe.vercel.app/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/fab.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- Additional project rows go here -->
         </div>
       </div>
