--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/fab.png"
+                      src="assets/urban.png"
                     />
                   </div>
                 </a>
