--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Fab air con</h3>
+                <h3 class="project-wrapper__text-title">Urban Greens</h3>
                 <div>
                   <p class="mb-4">
                     Designed and launched Fab Air Con’s site to make their services easy for real people to discover and use. 
